# Language_Model_Finetuning_Example

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  dependabot-prs.yaml  release-drafter.yml  test.yml
configs/: eval.yaml  train.yaml
configs/data/: mnist.yaml  tiny_shakespeare.yaml
configs/experiment/: example.yaml
configs/hparams_search/: mnist_optuna.yaml  tiny_shakespeare_optuna.yaml
configs/model/: tiny_shakespeare.yaml
configs/trainer/: default.yaml
src/: eval.py  generator.py  train.py
src/data/: mnist_datamodule.py  tinyshakespeare_datamodule.py  utils.py
src/models/: mnist_module.py  tiny_shakespeare_module.py
src/models/components/: simple_dense_net.py
src/utils/: __init__.py  instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py
tests/: conftest.py  test_datamodules.py  test_eval.py  test_sweeps.py  test_train.py
tests/helpers/: package_available.py  run_if.py  run_sh_command.py
